--- a/BP14/BP14(ChuyengiuaFeetvaMeter).html
+++ b/BP14/BP14(ChuyengiuaFeetvaMeter).html
@@ -5,23 +5,33 @@
     <title>Title</title>
 </head>
 <body>
-<label><input type="number" id = "feet" oninput="feet(this.value)"></label>
+<label><input type="number" id="feet" oninput="feet(this.value)"></label>
 <div id="result1"></div>
 <br>
-<label><input type="number" id = "metter" oninput="metter(this.value)"></label>
+<label><input type="number" id="metter" oninput="metter(this.value)"></label>
 <div id="result2"></div>
 <script>
     let f = parseFloat(document.getElementById("feet").value);
     feet(f);
     let me = parseFloat(document.getElementById("metter").value);
     metter(me);
-    function feet(x){
-        let m = 0.305 * x;
-        document.getElementById("result1").innerHTML = "Sau khi chuyển đổi ta được: " + m +" metter";
+
+    function feet(x) {
+        if (x <= 0) {
+            document.getElementById("result1").innerHTML = "Số đo phải lớn hơn 0";
+        } else {
+            let m = 0.305 * x;
+            document.getElementById("result1").innerHTML = "Sau khi chuyển đổi ta được: " + m + " metter";
+        }
     }
-    function metter(x){
-        let f = 3.279 * x;
-        document.getElementById("result2").innerHTML = "Sau khi chuyển đổi ta được: " + f +" metter";
+
+    function metter(x) {
+        if (x <= 0) {
+            document.getElementById("result2").innerHTML = "Số đo phải lớn hơn 0";
+        } else {
+            let f = 3.279 * x;
+            document.getElementById("result2").innerHTML = "Sau khi chuyển đổi ta được: " + f + " feet";
+        }
     }
 </script>
 </body>
