--- a/BP14/BP14(Luyentaptaovasudungham01)/Bai2.html
+++ b/BP14/BP14(Luyentaptaovasudungham01)/Bai2.html
@@ -6,14 +6,21 @@
 </head>
 <body>
 <label><input type="number" id= "nhap"></label>
-<button type="button" onclick= 'count(+document.getElementById("nhap").value)'>Count</button>
+<button type="button" id="input">Count</button>
 <div id="result"></div>
 <script>
     function count(x){
         let sum;
         sum = x+1;
         document.getElementById("result").innerHTML= sum;
+        return sum;
     }
+    let inputButton = document.getElementById("input");
+    inputButton.addEventListener("click",function () {
+        let a = count(+document.getElementById("nhap").value)/2
+        console.log(a);
+
+    })
 </script>
 </body>
 </html>
