--- a/BP16/BP16(Thuchanh Funny circles).html
+++ b/BP16/BP16(Thuchanh Funny circles).html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Funny Circles</title>
 </head>
 <body>
-$END$
+<canvas id="myCanvas" width="1920px" height="1080px" style="border:1px solid #d3d3d3"></canvas>
+<script>
+    class Circle {
+        constructor(x, y, radius) {
+            this.x = x;
+            this.y = y;
+            this.radius = radius;
+        }
+    }
+
+    function getRandomHex() {
+        return Math.floor(Math.random() * 255);
+    }
+
+    function getRandomColor() {
+        let red = getRandomHex();
+        let green = getRandomHex();
+        let blue = getRandomHex();
+        return "rgb(" + red + ", " + green + ", " + blue + ")";
+    }
+
+    function createCircle() {
+        let ctx = document.getElementById("myCanvas").getContext("2d");
+        let radius = Math.floor(Math.random(150) * 300); // Bán kính là random
+        let color = getRandomColor();
+        let x = Math.random() * window.innerWidth;
+        let y = Math.random() * window.innerHeight;
+        //let circle = new Circle (150, 100, radius); // Có thể thay radius thành bán kính cụ thể
+        let circle = new Circle(x, y, radius);
+        ctx.beginPath();
+        ctx.arc(circle.x, circle.y, circle.radius, 0, 2 * Math.PI);
+        ctx.fillStyle = color;
+        ctx.fill();
+    }
+
+    // createCircle(); Tạo 2 hình tròn
+    createCircle();
+    // function createMultipleCircle(){
+    //     for(var i = 0; i < 30; i++){
+    //         createCircle();
+    //     }
+    // }
+    // createMultipleCircle() //Tạo đa hình tròn
+</script>
 </body>
 </html>
