--- a/TestOOP/Testchuyendongbamphim.html
+++ b/TestOOP/Testchuyendongbamphim.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Test</title>
 </head>
 <body>
-$END$
+<img src="Screenshot%202023-01-19%20102727.jpg" alt="Vegeta" id="anh"
+     style="width: 150px; height: 150px; border-radius: 50%; position: relative; top: 0; left: 0; transition: 0.5ms ">
+<button onclick="trai()">Sang trái</button>
+<button onclick="len()">Lên</button>
+<button onclick="xuong()">Xuống</button>
+<button onclick="phai()">Sang phải</button>
+<script>
+  let x = document.getElementById('anh');
+  window.addEventListener('keydown', (e) => {
+    console.log(e.key);
+    if(e.key == "ArrowRight"){
+    x.style.left = parseInt(x.style.left) + 100 + 'px';}
+    else if(e.key=='ArrowLeft'){
+      x.style.left = parseInt(x.style.left) - 100 + 'px';
+    }
+
+  })
+</script>
 </body>
 </html>
